[package]
name = "peer-to-peer-impls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
clap = { version = "4.3.4", features = ["derive"] }
env_logger = "0.10.0"
futures = "0.3.28"
libp2p = { version = "0.51.3", features = ["async-std", "tcp", "noise", "yamux", "autonat", "identify", "macros"] }
